--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+python-pastebin (1.1.0-1+git+bsos1) brewmaster; urgency=low
+
+  * Packaged deb for SteamOS-Tools
+  * See: packages.libregeek.org
+  * Upstream authors and source: https://github.com/ProfessorKaos64/pastebin
+
+ -- SteamOS-Tools Signing Key <mdeguzis@gmail.com>  Fri, 29 Jan 2016 17:43:28 -0500
+
 pastebin (1.1.0-1) unstable; urgency=low
 
   * source package automatically created by stdeb 0.8.2
